--- a/CustodialWallet.Application/CustodialWallet.Application.csproj
+++ b/CustodialWallet.Application/CustodialWallet.Application.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CustodialWallet.Domain\CustodialWallet.Domain.csproj" />
+    <ProjectReference Include="..\CustodialWallet.Infostructure\CustodialWallet.Infostructure.csproj" />
+  </ItemGroup>
 
 </Project>
