--- a/CustodialWallet.API/appsettings.json
+++ b/CustodialWallet.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PgConnectionString": "Host=localhost;Database=CustodialWalletDb;Username=postgres_user;Password=postgres_password_strong_pass"
+  },
   "AllowedHosts": "*"
 }
