--- a/CustodialWallet.Infostructure/CustodialWallet.Infostructure.csproj
+++ b/CustodialWallet.Infostructure/CustodialWallet.Infostructure.csproj
@@ -3,7 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CustodialWallet.Domain\CustodialWallet.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
