Add base repository funcs for deposit, withdrow, add user, dto, models

--- a/CustodialWallet.API/appsettings.json
+++ b/CustodialWallet.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PgConnectionString": "Host=localhost;Database=CustodialWalletDb;Username=postgres_user;Password=postgres_password_strong_pass"
+    "PgConnectionString": "Host=postgres;Database=CustodialWalletDb;Username=postgres_user;Password=postgres_password_strong_pass"
   },
   "AllowedHosts": "*"
 }
