--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
       POSTGRES_USER: postgres_user
       POSTGRES_PASSWORD: postgres_password_strong_pass
       POSTGRES_DB: CustodialWalletDb
-      PGDATA: /var/lib/postgresql/data/pgdata
+      PGDATA: /var/lib/postgresql/data/pgdb_data
+    volumes:
+      -  postgres_data:/var/lib/postgresql/data/pgdb_data
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5429:5432"
     deploy:
@@ -51,3 +54,6 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
     depends_on: 
       - postgres
+
+volumes:
+  postgres_data:
