--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,4 @@
 services:
-  custodialwallet.api:
-    image: ${DOCKER_REGISTRY-}custodialwalletapi
-    build:
-      context: .
-      dockerfile: CustodialWallet.API/Dockerfile
-
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -17,6 +11,14 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin4_container
+    depends_on: 
+      - postgres
+ 
+  custodialwallet.api:
+    image: ${DOCKER_REGISTRY-}custodialwalletapi
+    build:
+      context: .
+      dockerfile: CustodialWallet.API/Dockerfile
     depends_on: 
       - postgres
 
